# gh-notify-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  module.nix
src/: main.rs
